# DiffUME

./: .gitignore  README.md  Read UME-R1 paper.md  plan-diffumeReasoningDiffusionEmbeddings.prompt.md  pyproject.toml  requirements-diffume.txt
configs/: diffume_debug_1gpu.yaml  diffume_stage1.yaml
configs/accelerate/: fsdp_8gpu.yaml  single_gpu.yaml  zero2_8gpu.yaml
diffume/: tokens.py
diffume/data/: collator.py  prompting.py  sft_dataset.py
diffume/diffusion/: loss.py  noising.py  pbnc.py  sampling.py
diffume/eval/: retrieval.py
diffume/inference/: embed_disc.py  embed_gen.py
diffume/losses/: infonce.py
diffume/models/: attention_block.py  diffume_model.py  readout.py
diffume/training/: train.py  trainer_step.py
docs/: architecture.md  dataset_report.md
scripts/: 00_inspect_dataset.py  01_smoke_one_step.sh  02_sbatch_smoke.sh  10_train_8gpu.sh  11_sbatch_train_8gpu.sh
tests/: conftest.py  test_block_attention.py  test_loss_readout.py  test_pbnc_emrs.py  test_prompting.py
